syntax = "proto3";
package queue;

service Queue {
  rpc Enqueue (EnqueueRequest) returns (EnqueueResponse);
  rpc Dequeue (DequeueRequest) returns (DequeueResponse);
  rpc Size (SizeRequest) returns (SizeResponse);
  rpc ReplicateData (stream ReplicateDataRequest) returns (stream ReplicateDataResponse);
}

message EnqueueRequest {
  int32 number = 1;
}


message EnqueueResponse {
  string confirmation = 1;
}

message DequeueRequest {
  int32 number = 1;
}

message DequeueResponse {
  repeated int32 numbers = 1;
}

message SizeRequest {}

message SizeResponse {
  int32 size = 1;
}

message ReplicateDataRequest {
  uint64 offset = 1;
}

message ReplicateDataResponse {
  string messageID = 1;
  bytes messageData = 2;
  uint64 nextOffset = 3;
}